[update] 分布式事务.md

--- a/docs/patch/docs/分布式事务.md
+++ b/docs/patch/docs/分布式事务.md
@@ -6,6 +6,36 @@
 
 我们都知道对于数据库事务的基本概念(ACID)，而分布式事务简单来说，就是针对一次业务操作，涉及到对不同的服务模块的调用（不同服务器上的数据库的写入），需要保证这对整个业务操作要么同时成功要么同时失败。
 
+## 分布式事务实现
+
+现在的分布式事务的处理，引入了一个协调者的角色即将整个事务交由三方`TxManager`进行协调管理，控制整个事务的处理。
+
+现在阿里内部整合推出的分布式事务的[seata](http://seata.io/zh-cn/)如火如荼。
+
+但有一个不得不提的一个项目[tx-lcn](https://github.com/codingapi/tx-lcn)，虽然目前好像维护乏力。但也是一个生产级的分布式事务处理框架。
+
+这个项目也在B站上开了公开课[Tx-LCN](https://www.bilibili.com/video/av80626430/)，希望有后继维护者。
+
+### TCC 补偿事务
+
+`TCC(try-confirm-cancel)`是从业务的角度上去实现分布式事务。通过在业务上进行事务的相关操作来实现分布式事务。
+
+- try :  主要是对业务系统做检测及资源预留。
+- confirm：确认执行业务操作。
+- cancel：取消执行业务操作。
+
+由于是从业务的角度上去实现分布式事务，所有在各个阶段中对数据库的数据处理粒度可以根据不同的需求进行控制。但是因为要在业务上分别实现`try`、`confirm`、`cancel`三个操作，在业务开发量和系统的代码侵入上很强。
+
+
+
+### 消息事务
+
+即使用消息中间件，利用消息中间件提供的消息可靠性保证来实现两阶段提交，通过响应的事务补偿机制实现最终一致性。
+
+以下也此作为实现。
+
+
+
 ## MQ实现分布式事务
 
 > 使用MQ实现分布式事务，实现最终一致性。
