--- a/docs/patch/docs/类加载与动态代理.md
+++ b/docs/patch/docs/类加载与动态代理.md
@@ -1,2 +1,63 @@
-# 类加载与动态代理
+# 类加载
 
+> 其实这个东西已经遇到很多次了，看`Dubbo`的增强`SPI`扩展时又遇到了，不如，就记录下来吧。:feet:
+
+## 类加载机制
+
+> 类加载概念：Java虚拟机`.class`文件加载到内存，并对数据进行校验、转换解析(连接)和初始化，然后被使用和卸载。
+>
+> `.class`文件由类装载器装载后，在`JVM`将形成一份描述Class结构的元信息对象(如`String.class`)。
+>
+> 通过该元信息对象可以获知Class的结构信息：用户可以借由这个Class相关的元信息对象间接调用Class对象的功能(如`反射`)。
+
+
+
+## 类加载过程
+
+![img](_media\20201224-01)
+
+
+
+- 加载
+
+  将类的`.class`以二进制数据字节流的形式读入到内存中，将其放在运行时数据区的`方法区`内，然后在堆区创建一个`java.lang.Class`对象，用来封装类在方法区内的数据结构。
+
+- 连接
+
+  - 验证
+
+    验证的目的是为了确保Class文件中的字节流包含的信息符合当前虚拟机的要求，而且不会危害虚拟机自身的安全。
+
+    大致都会完成以下四个阶段的验证：文件格式的验证、元数据的验证、字节码验证和符号引用验证。
+
+  - 准备
+
+    是正式为类变量分配内存并设置类变量初始值的阶段，这些内存都将在方法区中进行分配。
+
+  - 解析
+
+    解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。
+
+- 初始化
+
+   初始化，为类的静态变量赋予正确的初始值，JVM负责对类进行初始化，主要对类变量进行初始化。
+
+- 使用
+
+- 卸载
+
+
+
+## 类加载器
+
+### 双亲委派模型
+
+### 自定义类加载器
+
+## 线程上下文加载器
+
+### SPI
+
+## 参考
+
+[Java类加载机制](https://juejin.cn/post/6844903564804882445)
