update(insane): update index.

--- a/docs/insane/algorithm/最小编辑距离.md
+++ b/docs/insane/algorithm/最小编辑距离.md
@@ -4,7 +4,7 @@
 
 这里只记录我想要这个功能，然后去了解和学习得到的解法。
 
-![image-20201225225859797](..\_media\20201225-01.png)
+![image-20201225225859797](../_media/20201225-01.png)
 
 ### 问题概述：
 
