update(classLoader): update 类加载与动态代理.md

--- a/docs/patch/docs/类加载与动态代理.md
+++ b/docs/patch/docs/类加载与动态代理.md
@@ -70,6 +70,8 @@
 
 > 注意：这里的双亲委派，并没有继承关系，只是一个向上委托`parent`加载器去加载的流程。
 
+![class loader](_media\20201225-01.png)
+
 `java.lang.ClassLoader#loadClass(java.lang.String, boolean)`的源码如下。
 
 ```java
@@ -114,7 +116,13 @@
 
 
 
-从虚拟机的角度来说，只存在两种不同的类加载器：一种是启动类加载器（`Bootstrap ClassLoader`），该类加载器使用C++语言实现，属于虚拟机自身的一部分。另外一种就是所有其它的类加载器，这些类加载器是由Java语言实现，独立于`JVM`外部，并且全部继承自抽象类`java.lang.ClassLoader`。
+从虚拟机的角度来说，只存在两种不同的类加载器：
+
+一种是启动类加载器（`Bootstrap ClassLoader`），该类加载器使用C++语言实现，属于虚拟机自身的一部分。
+
+另外一种就是所有其它的类加载器，这些类加载器是由Java语言实现，独立于`JVM`外部，并且全部继承自抽象类`java.lang.ClassLoader`。
+
+
 
 从Java开发人员的角度来看，大部分Java程序一般会使用到以下三种系统提供的类加载器：
 
@@ -165,18 +173,24 @@ public class MyClassLoader extends ClassLoader {
 
 
 
-## 线程上下文加载器
+### 线程上下文加载器
 
 ```java
 ClassLoader cl = Thread.currentThread().getContextClassLoader();
 ```
 
+线程上下文加载器是打破了`双亲委派模型`的，为什么这么说呢，那就要说一下`SPI`机制。
 
+#### SPI
 
-### SPI
+> `SPI`全称`Service Provider Interface`，是Java提供的一套用来被第三方实现或者扩展的API，它可以用来启用框架扩展和替换组件。
+
+常见的使用，就是数据库驱动，当然，还有`Dubbo`自己的增强版`SPI`。
 
 ## 参考
 
 [Java类加载机制](https://juejin.cn/post/6844903564804882445)
 
 [初始化静态代码块异常](https://stackoverflow.com/questions/6352215/why-noclassdeffounderror-caused-by-static-field-initialization-failure)
+
+[Difference between thread's context class loader and normal classloader](https://stackoverflow.com/questions/1771679/difference-between-threads-context-class-loader-and-normal-classloader)
