update(docs): 类加载与动态代理.md

--- a/docs/patch/docs/类加载与动态代理.md
+++ b/docs/patch/docs/类加载与动态代理.md
@@ -66,6 +66,24 @@
 
 同时，一个类所引用的类，也应是由同一类加载器加载的(`SPI打破了这种机制，下面会讲`)。
 
+这里即是获取默认的类加载器，native方法`getClassLoader0()`返回的就是调用者的类加载器。
+
+```java
+ @CallerSensitive
+    public ClassLoader getClassLoader() {
+        ClassLoader cl = getClassLoader0();
+        if (cl == null)
+            return null;
+        SecurityManager sm = System.getSecurityManager();
+        if (sm != null) {
+            ClassLoader.checkClassLoaderPermission(cl, Reflection.getCallerClass());
+        }
+        return cl;
+    }
+```
+
+
+
 ### 双亲委派模型
 
 > 注意：这里的双亲委派，并没有继承关系，只是一个向上委托`parent`加载器去加载的流程。
@@ -183,9 +201,50 @@ ClassLoader cl = Thread.currentThread().getContextClassLoader();
 
 #### SPI
 
-> `SPI`全称`Service Provider Interface`，是Java提供的一套用来被第三方实现或者扩展的API，它可以用来启用框架扩展和替换组件。
+> `SPI`全称`Service Provider Interface`，是Java提供的一套用来被第三方实现或者扩展的API，它可以用来启用框架扩展和替换组件。常见的 `SPI` 有 `JDBC、JCE、JNDI、JAXP 和 JBI` 等。
+>
+> 这些 `SPI` 的接口由 `Java` 核心库来提供，而这些` SPI` 的实现代码则是作为 Java 应用所依赖的 jar 包被包含进类路径`（classpath）`里。
 
-常见的使用，就是数据库驱动，当然，还有`Dubbo`自己的增强版`SPI`。
+那么问题来了，**SPI的接口**是Java核心库的一部分，是由**启动类加载器(Bootstrap Classloader)**来加载的；**SPI的实现类**是由**系统类加载器(System ClassLoader)**来加载的。引导类加载器是无法找到 SPI 的实现类的，因为依照双亲委派模型，`BootstrapClassloader`无法委派`AppClassLoader`来加载类。
+
+而线程上下文类加载器破坏了“双亲委派模型”，可以在执行线程中抛弃双亲委派加载链模式，使程序可以逆向使用类加载器。
+
+简单来说就是：
+
+> `ClassLoader cl = Thread.currentThread().getContextClassLoader()`;
+
+在`ContextClassLoader`默认存放了`AppClassLoader`的引用，由于它是在**运行时**被放在了线程中，所以不管当前程序处于何处（`BootstrapClassLoader`或是`ExtClassLoader`等），在任何需要的时候都可以用`Thread.currentThread().getContextClassLoader()`取出应用程序类加载器来完成需要的操作，哪怕你是在由`BootstrapClassLoader`加载的类里面要创建依赖。
+
+常见的使用，就是数据库驱动，当然，还有`Dubbo`自己的增强版`SPI`，下面我们讲一下`JDBC`。
+
+**JDBC**
+
+```java
+// 加载Class到AppClassLoader（系统类加载器），然后注册驱动类
+// Class.forName("com.mysql.jdbc.Driver").newInstance(); 
+String url = "jdbc:mysql://localhost:3306/testdb";    
+// 通过java库获取数据库连接
+Connection conn = java.sql.DriverManager.getConnection(url, "name", "password"); 
+```
+
+我们这样可以拿到Connection对象是为什么呢，我们先看`DriverManager.getConnection()(./Java/jdk1.8.0_261/src.zip!/java/sql/DriverManager.java:100)`中。
+
+```java
+    /**
+     * Load the initial JDBC drivers by checking the System property
+     * jdbc.properties and then use the {@code ServiceLoader} mechanism
+     */
+    static {
+        loadInitialDrivers();
+        println("JDBC DriverManager initialized");
+    }
+```
+
+在初始化类的时候会自动调用静态代码块，所以说会执行`loadInitialDrivers()`方法。
+
+这里的`java.sql.DriverManager`很显然是由`BootstrapClassLoader`加载的。
+
+但是对于驱动的实现`com.mysql.jdbc.Driver.Class`并不在`Java`自己的系统目录下，那么`BootstrapClassLoader`显然加载不了，怎么办呢，就从上下文加载器中获取到`AppClassLoader`来加载约定好的应用目录下（`META-INF/services`）的实现类。
 
 ## 参考
 
@@ -194,3 +253,5 @@ ClassLoader cl = Thread.currentThread().getContextClassLoader();
 [初始化静态代码块异常](https://stackoverflow.com/questions/6352215/why-noclassdeffounderror-caused-by-static-field-initialization-failure)
 
 [Difference between thread's context class loader and normal classloader](https://stackoverflow.com/questions/1771679/difference-between-threads-context-class-loader-and-normal-classloader)
+
+[真正理解线程上下文类加载器（多案例分析）](https://blog.csdn.net/yangcheng33/article/details/52631940)
