update(reference): add new reference.

--- a/docs/patch/docs/类加载与动态代理.md
+++ b/docs/patch/docs/类加载与动态代理.md
@@ -255,3 +255,5 @@ Connection conn = java.sql.DriverManager.getConnection(url, "name", "password");
 [Difference between thread's context class loader and normal classloader](https://stackoverflow.com/questions/1771679/difference-between-threads-context-class-loader-and-normal-classloader)
 
 [真正理解线程上下文类加载器（多案例分析）](https://blog.csdn.net/yangcheng33/article/details/52631940)
+
+[Java中SPI机制深入及源码解析](https://cxis.me/2017/04/17/Java%E4%B8%ADSPI%E6%9C%BA%E5%88%B6%E6%B7%B1%E5%85%A5%E5%8F%8A%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
