--- a/docs/insane/2020/# 2020.md
+++ b/docs/insane/2020/# 2020.md
@@ -1,1 +1,64 @@
-# 2020
+# 2020总结
+
+> 2020 has been really a tough year. :mask:
+
+
+
+## 生活
+
+生活还是那么`normal`，没有太多变化，毕竟工作之余，确实也没有那么多的时间去做什么。
+
+但是，很开心也认识了一些新朋友。
+
+有开源后浪，阿冬同学。
+
+有已回国室友`Isacc`，没人一起玩吉他聊天喝酒了。
+
+有相互分享生活的`Discord`上的朋友。
+
+尽管，环顾周围，只是一个身影。
+
+
+
+## 代码
+
+今年有更多的时间去做一些开源的事情和补充自己的知识体系，进一步压缩了自己在刷`知乎`一类的无用信息的时间。
+
+参与到开源项目的开发和维护中，在对项目中的推广，协作中我们有冲突有合作，大家都为了项目更好发展的很`nice`的人阿。
+
+看了更多项目源码和技术书籍，感觉自己对于代码的某种`感觉`越来越深，甚至有时候看某段源码有`我上我也行`的感觉。:dog:
+
+同时也在看`编译原理`还有一些更底层的东西，毕竟这都是基础，出来混，总要还的。
+
+又开始刷算法了，咦？为什么要说又。让人头秃，起手双指针，结尾`dp`一把梭，……大厂敲门砖。
+
+去了解一个新的知识体系的过程，除了网上搜到的博客官网之外，发现还有一个地方，`知网论文`，也算是公司福利吧。:sweat_smile:
+
+
+
+## 工作
+
+工作内容并没有什么变化，只能说要对工作负责，对自己敲的代码负责，这是底线吧。
+
+因为数据迁移业务写的一套基于`Predicated`魔改的校验链，被不少同事夸了，也分享了一波，甚至有点小开心。
+
+在敲代码的时候考虑的东西更多，不论是从基础结构上还是扩展性上，可能这也是自己感受到的某种潜移默化。
+
+
+
+## 展望
+
+是的，打算离职了，多个方面吧。
+
+感觉在这样完全业务化的部门和我不太契合，没有技术沉淀可言，甚至觉得对不起自己每天凌晨还在新增的小绿点。
+
+现在持续的`more than 996`的乙方生活，更是不自在，高压被动的画饼摸鱼环境下，太多可以吐槽的地方了，罢了。
+
+面试的时候，不太会展现自己，这一点也需要加强。
+
+希望，2021，一切都好。
+
+
+
+
+
