update(cmd): add tcpdump cmd.

--- a/docs/patch/docs/服务器常用小指令.md
+++ b/docs/patch/docs/服务器常用小指令.md
@@ -68,3 +68,24 @@ sshd:ALL # 允许全部的 ssh 登录
 
 ### vim /etc/hosts.deny
 
+---
+
+## 网络
+### tcpdump
+> 根据使用者的定义对网络上的数据包进行截获的包分析。
+
+- 默认启动  
+  `tcpdump`  
+  普通情况下，直接启动tcpdump将监视第一个网络接口上所有流过的数据包。
+
+- 监视指定网络接口的数据包  
+  `tcpdump -i eth1`
+  默认tcpdump只会监视第一个网络接口，一般是`eth0`。
+
+
+### nc
+`nc的作用`
+- 实现任意TCP/UDP端口的侦听，nc可以作为server以TCP或UDP方式侦听指定端口
+- 端口的扫描，nc可以作为client发起TCP或UDP连接
+- 机器之间传输文件
+- 机器之间网络测速
