chore: update format.

--- a/docs/patch/docs/命令行翻译脚本.md
+++ b/docs/patch/docs/命令行翻译脚本.md
@@ -44,7 +44,7 @@ def translate(word):
     if "basic" in data.keys():
         explains = data["basic"]["explains"]
         if "explains" in data["basic"].keys():
-            print("\nexplains")
+            print("\nexplains:")
             for explain in explains:
                 print(explain)
  
