--- a/docs/insane/2021/2021.md
+++ b/docs/insane/2021/2021.md
@@ -8,7 +8,8 @@
 - 应用
   熟悉SpringBoot，SpringCloud的整体应用使用，完善自身应用的能力。
   基于SpringBoot去做一些集成脚手架。
-  学习Kafka，以及K8s。
+  学习Kafka。
+  学习K8s。
 
 - 架构
   开始读架构设计方面的书籍。
