update: update docs.

--- a/docs/insane/2021/操作系统x01.md
+++ b/docs/insane/2021/操作系统x01.md
@@ -1,2 +1,51 @@
 # 操作系统01
 
+> 读书笔记，主要内容来自于《操作系统导论》。
+
+## 基本概念
+
+### 进程
+
+操作系统为正在运行的程序提供的抽象，就是所谓的进程（Process）。
+
+进程的组成部分：
+
+- 内存
+- 寄存器
+
+进程API
+
+- 创建
+- 销毁
+- 等待
+- 其他控制
+- 状态
+
+进程状态
+
+- 运行
+- 就绪
+- 阻塞
+
+
+
+### 受限制的操作
+
+如果让程序可以直接对操作系统进行处理的优势会十分快，但是却无法保证操作系统的资源和权限安全。
+
+于是便出现了`用户模式`和`内核模式`的区分。
+
+#### 用户模式
+
+在用户模式下，应用程序不能完全访问硬件资源。
+
+#### 内核模式
+
+在内核模式下，操作系统可以访问机器的全部资源。
+
+
+
+为了解决用户程序希望执行某种`特权操作`（如I/O操作）执行系统调用，于是提供了`陷入内核`和`从陷阱返回到用户模式`的特别说明和一些指令。让操作系统告诉硬件陷阱表在系统中的位置。
+
+这样，程序在执行系统调用时，需要执行特殊的陷阱(`trap`)指令跳入内核，将权限级别提升到内核模式，就可以执行有限的系统调用指令。
+
