update: study scope in 2021.

--- a/docs/insane/2021/2021.md
+++ b/docs/insane/2021/2021.md
@@ -8,6 +8,7 @@
 - 应用
   熟悉SpringBoot，SpringCloud的整体应用使用，完善自身应用的能力。
   基于SpringBoot去做一些集成脚手架。
+  学习Spark, for more skills and work.
   学习Kafka。
   学习K8s。
 
