update: add new refer about gc

--- a/docs/patch/docs/G1垃圾回收器.md
+++ b/docs/patch/docs/G1垃圾回收器.md
@@ -179,6 +179,8 @@ G1是将堆分为的很多个小方块（`Region`），不再像以前一样对`
 ---
 ## 参考
 
+- [HotSpot Virtual Machine Garbage Collection Tuning Guide - Oracle](https://docs.oracle.com/en/java/javase/17/gctuning/)
+
 - [Plumber 中文版](https://github.com/gaoxingliang/goodutils/blob/master/gc_handbook_zh.md)
 
 - [新一代垃圾回收器：G1详解](https://www.bilibili.com/video/av89885794)
